# train-schedule-optimisation

./: CMakeLists.txt  Instance.h  LICENSE  Makefile  MaxSAT.cc  MaxSAT.h  README.md  Requirement.h  Resource.h  Route.h  Train.cpp  example.txt  main.cc  main.cpp  route_section.h
algorithms/: Alg_BLS.cc  Alg_BLS.h  Alg_LinearSU.h  Alg_LinearSU_Clustering.cc  Alg_LinearSU_Clustering.h  Alg_LinearSU_Mod.cc  Alg_LinearSU_Mod.h  Alg_MSU3.cc  Alg_MSU3.h  Alg_OBV.cc  Alg_OBV.h  Alg_OLL.cc  Alg_OLL.h  Alg_OLL_Mod.cc  Alg_OLL_Mod.h  Alg_PartMSU3.cc  Alg_PartMSU3.h  Alg_WBO.h
data/: translation_table.csv
data/ABELS2020/ENG/: tl1_eng.json  tl1e_eng.json  tl1ei_eng.json  ts_eng.json  tse_eng.json
data/ABELS2020/GER/: tl1.json  ts.json  tse.json
data/PESP/set-01/: R1L1.txt  R1L2.txt  R1L3.txt  R1L4.txt  R2L1.txt  R2L2.txt  (+10 more)
include/rapidjson/: ._writer.h
problem/: Instance.h  Requirement.h  Route.h  Train.h  route_path.h  route_section.h  stats.h  train_run_sections.h
problem_instances/: ._01_dummy.json  ._sample_solutions
rapidjson/: document.h
solver/LinSBPS/: Encoder.cc  Encoder.h  LNSparameters.h  Main.cc  Makefile  MaxSAT.cc  MaxSAT.h  MaxSATFormula.h  MaxSAT_Partition.cc  MaxTypes.h  ParserMaxSAT.h
solver/Loandra/: Main.cc  Main.or  Makefile  MaxSAT.h  depend.mk  starexec_description
solver/MaxHS/: Makefile
solver/Open-WBO-Inc/: MaxSAT.cc  MaxSAT.h  MaxTypes.h
solver/SATLike/: Makefile  SATLike3.0-c  basis_pms.h  deci.h  pms.cpp  pms.h
solver/TT-Open-WBO-Inc/: MaxSAT.cc  MaxSAT.h  MaxTypes.h  Test.h  Torc.cc  Torc.h
validation tools/: verification.cp
(+83 files in other folders)
